# ESRP-COPT

./: CMakeLists.txt  Makefile  build.sh  debug.sh
check/scripts/: parse.awk  parse_netrec.awk  run.sh  run_netrec.sh  runjob.sh  runsubjob.sh
check/settings/: 1000-100-50-5000.set  test.set
src/: Benders.cpp  Benders.h  Functions.cpp  Functions.h  Main.cpp  Variables.h
